{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 68,
  "lineage": "c525082f-5579-700a-4cb3-936a4e422388",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cd_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d44e8d52a48044e",
            "association_id": "eipassoc-04a4a0175da3ae71f",
            "domain": "vpc",
            "id": "eipalloc-03d44e8d52a48044e",
            "instance": "i-0b27d7a6d67ce62c2",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0b26f403ff9697438",
            "private_dns": "ip-10-0-1-97.eu-west-2.compute.internal",
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-35-176-36-221.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.36.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cd_web_eip-0"
            },
            "tags_all": {
              "Name": "cd_web_eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cd_web",
            "aws_key_pair.cd_kp",
            "aws_security_group.cd_web_sg",
            "aws_subnet.cd_public_subnet",
            "aws_vpc.cd_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4d97905fcd792b2",
            "association_id": "eipassoc-0a30edfd66e9a8944",
            "domain": "vpc",
            "id": "eipalloc-0f4d97905fcd792b2",
            "instance": "i-0c8a177988579f10b",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-08bec703da9d58348",
            "private_dns": "ip-10-0-2-164.eu-west-2.compute.internal",
            "private_ip": "10.0.2.164",
            "public_dns": "ec2-18-134-67-49.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.67.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cd_web_eip-1"
            },
            "tags_all": {
              "Name": "cd_web_eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cd_web",
            "aws_key_pair.cd_kp",
            "aws_security_group.cd_web_sg",
            "aws_subnet.cd_public_subnet",
            "aws_vpc.cd_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cd_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05eb46f888200e84d",
            "arn": "arn:aws:ec2:eu-west-2:355316579182:instance/i-0b27d7a6d67ce62c2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b27d7a6d67ce62c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "cd_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b26f403ff9697438",
            "private_dns": "ip-10-0-1-97.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af9aecf0a6f6211a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cac9539bd8833d4b",
            "tags": {
              "Name": "cd_web_0"
            },
            "tags_all": {
              "Name": "cd_web_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eca4883a2c13dd7d"
            ]
          },
          "dependencies": [
            "aws_key_pair.cd_kp",
            "aws_security_group.cd_web_sg",
            "aws_subnet.cd_public_subnet",
            "aws_vpc.cd_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05eb46f888200e84d",
            "arn": "arn:aws:ec2:eu-west-2:355316579182:instance/i-0c8a177988579f10b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8a177988579f10b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "cd_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08bec703da9d58348",
            "private_dns": "ip-10-0-2-164.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a22bb1b6232e3664",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085137f886bd17be3",
            "tags": {
              "Name": "cd_web_1"
            },
            "tags_all": {
              "Name": "cd_web_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eca4883a2c13dd7d"
            ]
          },
          "dependencies": [
            "aws_key_pair.cd_kp",
            "aws_security_group.cd_web_sg",
            "aws_subnet.cd_public_subnet",
            "aws_vpc.cd_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:internet-gateway/igw-0914f1334239f315c",
            "id": "igw-0914f1334239f315c",
            "owner_id": "355316579182",
            "tags": {
              "Name": "cd_igw"
            },
            "tags_all": {
              "Name": "cd_igw"
            },
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cd_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:route-table/rtb-0149dffbb57dbce5d",
            "id": "rtb-0149dffbb57dbce5d",
            "owner_id": "355316579182",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cd_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:route-table/rtb-03c05080e7675259a",
            "id": "rtb-03c05080e7675259a",
            "owner_id": "355316579182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0914f1334239f315c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cd_igw",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dde62cf783473e01",
            "route_table_id": "rtb-0149dffbb57dbce5d",
            "subnet_id": "subnet-0359b56aed36b9e2e"
          },
          "dependencies": [
            "aws_route_table.cd_private_rt",
            "aws_subnet.cd_private_subnet",
            "aws_vpc.cd_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc636a7a748bc5e9",
            "route_table_id": "rtb-0149dffbb57dbce5d",
            "subnet_id": "subnet-0dfae324e97b211a5"
          },
          "dependencies": [
            "aws_route_table.cd_private_rt",
            "aws_subnet.cd_private_subnet",
            "aws_vpc.cd_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f24f1f88aa39e4b",
            "route_table_id": "rtb-03c05080e7675259a",
            "subnet_id": "subnet-0cac9539bd8833d4b"
          },
          "dependencies": [
            "aws_internet_gateway.cd_igw",
            "aws_route_table.cd_public_rt",
            "aws_subnet.cd_public_subnet",
            "aws_vpc.cd_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0349aaef897931006",
            "route_table_id": "rtb-03c05080e7675259a",
            "subnet_id": "subnet-085137f886bd17be3"
          },
          "dependencies": [
            "aws_internet_gateway.cd_igw",
            "aws_route_table.cd_public_rt",
            "aws_subnet.cd_public_subnet",
            "aws_vpc.cd_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cd_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:security-group/sg-05a88bce1ea57f24b",
            "description": "Security group for cd database",
            "egress": [],
            "id": "sg-05a88bce1ea57f24b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the web sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eca4883a2c13dd7d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cd_db_sg",
            "name_prefix": "",
            "owner_id": "355316579182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd_db_sg"
            },
            "tags_all": {
              "Name": "cd_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cd_web_sg",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cd_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:security-group/sg-0eca4883a2c13dd7d",
            "description": "Security group for cd web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eca4883a2c13dd7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "86.191.144.181/32"
                ],
                "description": "Allow SSH from my machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cd_web_sg",
            "name_prefix": "",
            "owner_id": "355316579182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd_web_sg"
            },
            "tags_all": {
              "Name": "cd_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:subnet/subnet-0359b56aed36b9e2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0359b56aed36b9e2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355316579182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cd_private_subnet_0"
            },
            "tags_all": {
              "Name": "cd_private_subnet_0"
            },
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "dependencies": [
            "aws_vpc.cd_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:subnet/subnet-0dfae324e97b211a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfae324e97b211a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355316579182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cd_private_subnet_1"
            },
            "tags_all": {
              "Name": "cd_private_subnet_1"
            },
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "dependencies": [
            "aws_vpc.cd_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:subnet/subnet-0cac9539bd8833d4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cac9539bd8833d4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355316579182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cd_public_subnet_0"
            },
            "tags_all": {
              "Name": "cd_public_subnet_0"
            },
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "dependencies": [
            "aws_vpc.cd_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:subnet/subnet-085137f886bd17be3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085137f886bd17be3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355316579182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cd_public_subnet_1"
            },
            "tags_all": {
              "Name": "cd_public_subnet_1"
            },
            "vpc_id": "vpc-0996126b6e892264d"
          },
          "dependencies": [
            "aws_vpc.cd_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355316579182:vpc/vpc-0996126b6e892264d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e65d4f27c240319",
            "default_route_table_id": "rtb-04c87692bb768d4ad",
            "default_security_group_id": "sg-07dc0ac6c90a19e4a",
            "dhcp_options_id": "dopt-024fdd2da13745932",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0996126b6e892264d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c87692bb768d4ad",
            "owner_id": "355316579182",
            "tags": {
              "Name": "cd_vpc"
            },
            "tags_all": {
              "Name": "cd_vpc"
            }
          }
        }
      ]
    }
  ]
}